CELE-143 Add size for synapses in the DB
